Botones del menu terminados

--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@
         </div>
       </section>
       
+      <div class="menu">
+       <div class="b1"><img src="menu/Frame 9.png" alt=""></div>
+       <div class="b"><img src="menu/Frame 10.png" alt=""></div>
+       <div class="b"><img src="menu/Frame 11@2x.png" alt=""></div>
+       <div class="b"><img src="menu/Frame 12.png" alt=""></div>
+       <div class="b"><img src="menu/Frame 13.png" alt=""></div>
+       <div class="b"><img src="menu/Frame 14.png" alt=""></div>
+       <div class="b"><img src="menu/Frame 15.png" alt=""></div>
+       <div class="b"><img src="menu/Frame 16.png" alt=""></div>
+      </div>
     
 </body>
 </html>
