--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="smartphones/seccion2/seccion2.css">
     <link rel="stylesheet" href="smartphones/seccion2/seccionp2.css">
     <link rel="stylesheet" href="smartphones/seccion3/seccion3.css">
+    <link rel="stylesheet" href="smartphones/seccion3/seccionp3.css">
     <link rel="stylesheet" href="footer/footer.css">
 
 </head>
@@ -151,6 +152,28 @@
     <img class="o5" src="smartphones/seccion2/image 7.png" alt="">
    </div>
 
+   <div class="teTx">
+    <p class="c">
+        <span class="a">Top</span>
+        <span class="b">Electronics Brands</span>
+    </p>
+    <p class="d">
+        <span class="f">View All</span>
+        <span class="g">></span>
+    </p>
+   </div>
+   <div class="of">
+    <img class="of1" src="smartphones/Line 24.png" alt="">
+    <img class="of2" src="smartphones/Line 25.png" alt="">
+</div>
+
+<div class="ofertas">
+    <img src="smartphones/seccion3/Group 50.png" alt="">
+    <img src="smartphones/seccion3/Group 51.png" alt="">
+    <img src="smartphones/seccion3/Group 52.png" alt="">
+   </div>
+ 
+ 
 
 </body>
 </html>
