menu fruta y verdura terminado

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="smartphones/seccion2/seccion2.css">
     <link rel="stylesheet" href="smartphones/seccion2/seccionp2.css">
     <link rel="stylesheet" href="smartphones/seccion3/seccion3.css">
-    <link rel="stylesheet" href="smartphones/seccion3/seccionp3.css">
+    <link rel="stylesheet" href="smartphones/seccion4/seccion4.css">
+    <link rel="stylesheet" href="smartphones/seccion4/seccionp4.css">
     <link rel="stylesheet" href="footer/footer.css">
 
 </head>
@@ -171,9 +172,60 @@
     <img src="smartphones/seccion3/Group 50.png" alt="">
     <img src="smartphones/seccion3/Group 51.png" alt="">
     <img src="smartphones/seccion3/Group 52.png" alt="">
-   </div>
+</div>
+<div class="ofertas">
+    <img class="x" src="smartphones/seccion3/Group 53.png" alt="">
  
- 
+</div>
+
+<div class="comida">
+    <p class="v">
+        <span class="o">Daily </span>
+        <span class="u">Essentials</span>
+    </p>
+    <p class="r">
+        <span>View All</span>
+        <span class="d">></span>
+    </p>
+</div>
+<div class="iM4">
+    <img class="iM5" src="smartphones/Line 24.png" alt="">
+    <img class="iM6" src="smartphones/Line 25.png" alt="">
+</div>
+
+<div class="fon"> 
+    <img class="c1" src="smartphones/seccion4/Rectangle 18.png" alt="">
+    <img src="smartphones/seccion4/Rectangle 19.png" alt="">
+    <img src="smartphones/seccion4/Rectangle 20.png" alt="">
+    <img src="smartphones/seccion4/Rectangle 21.png" alt="">
+    <img src="smartphones/seccion4/Rectangle 22.png" alt="">
+    <img src="smartphones/seccion4/Rectangle 23.png" alt="">
+</div>
+<div class="fon2">
+    <img class="frut" src="smartphones/seccion4/41624-7-groceries-hd-download-hd-png 1.png" alt="">
+    <img src="smartphones/seccion4/54018-9-grocery-free-hq-image 2.png" alt="">
+    <img src="smartphones/seccion4/pngegg 1.png" alt="">
+    <img src="smartphones/seccion4/23410-4-strawberry-photo 1.png" alt="">
+    <img src="smartphones/seccion4/22136-3-mango-fruit 1.png" alt="">
+    <img src="smartphones/seccion4/35763-7-cherry-fruit-file 1.png" alt="">
+</div>
+<span class="tfrut">
+    <p>Daily Essentials</p>
+    <p>Vegitables</p>
+    <p>Fruits</p>
+    <p>Strowberry</p>
+    <p>Mango</p>
+    <p>Cherry</p>
+</span>
+<span class="tfrut2">
+    <p>UP to 50% OFF</p>
+    <p>UP to 50% OFF</p>
+    <p>UP to 50% OFF</p>
+    <p>UP to 50% OFF</p>
+    <p>UP to 50% OFF</p>
+    <p>UP to 50% OFF</p>
+
+</span>
 
 </body>
 </html>
