footer y diseño terminado

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" href="smartphones/seccion2/seccionp2.css">
     <link rel="stylesheet" href="smartphones/seccion3/seccion3.css">
     <link rel="stylesheet" href="smartphones/seccion4/seccion4.css">
-    <link rel="stylesheet" href="smartphones/seccion4/seccionp4.css">
     <link rel="stylesheet" href="footer/footer.css">
 
 </head>
@@ -224,8 +223,44 @@
     <p>UP to 50% OFF</p>
     <p>UP to 50% OFF</p>
     <p>UP to 50% OFF</p>
-
 </span>
+
+<div class="footer">
+    <img src="footer/Rectangle 24.png" alt="">
+</div>
+<div class="fot">
+    <img class="fot" src="footer/Mask group.png" alt="">
+</div>
+<div class="fot2">
+    <img src="footer/Group 202.png" alt="">
+</div>
+<div class="fot3">
+    <img src="footer/Group 203.png" alt="">
+</div>
+<div class="fot4">
+    <img src="footer/MegaMart.png" alt="">
+</div>
+<div class="fot5">
+    <img src="footer/Contact Us.png" alt="">
+</div>
+<div class="fot6">
+    <img src="footer/Group 60.png" alt="">
+</div>
+<div class="fot7">
+    <img src="footer/Group 61.png" alt="">
+</div>
+<div class="fot8">
+    <img src="footer/Download App.png" alt="">
+</div>
+<div class="fot9">
+    <img src="footer/Group 200.png" alt="">
+</div>
+<div class="tot10">
+    <img src="footer/Line 34.png" alt="">
+</div>
+<div class="fot11">
+    <img src="footer/© 2022 All rights reserved. Reliance Retail Ltd..png" alt="">
+</div>
 
 </body>
 </html>
